# Prueba1_DisenoLogico

Prueba1/Prueba/: Prueba1_Digital.dig
Prueba3_Repo2_P2_2019/: GCD.v  gcd.c
Prueba3_Repo2_P2_2019/tests/: CMakeLists.txt  test_gcd.cpp
Prueba_Lab_P2_2019/Ejer1_VGA_640x480/: CMakeLists.txt
Prueba_Lab_P2_2019/Ejer1_VGA_640x480/cpp/: VGADefines.h  VGADisplay.cpp  VGADisplay.h  VGATestMain.cpp
Prueba_Lab_P2_2019/Ejer1_VGA_640x480/verilog/: VGA640x480.v  VGADefines.vh
Prueba_Lab_P2_2019/Ejer2_Piano_SineWave/: Piano.xlsx  SineWave.cpp  SineWave.h
Prueba_Lab_P2_2019/Ejer2_Piano_SineWave/tests/: CMakeLists.txt  test_piano.cpp
Prueba_Lab_P2_2019/Ejer3_LCM/: LCM.v  lcm.cpp
Prueba_Lab_P2_2019/Ejer3_LCM/tests/: CMakeLists.txt  test_lcm.cpp
Prueba_Lab_P2_2019/Ejer4_VGA_Xilinx/verilog/: VGA640x480.ucf  VGAClock.v  VGATop.v
